# SupercellCompression

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Workspace.lua  premake5.lua  setup.cmd
cli/: console.cpp  decompress.cpp  image_convert.cpp  main.cpp  main.h  options.cpp  options.h  premake5.lua
cli-tool/: CMakeLists.txt
cli-tool/source/: main.cpp  main.h
cli-tool/source/backend/: interface.h  sc.hpp
cli/source/: compress.cpp  console.cpp  console.h  decompress.cpp  image_convert.cpp  main.cpp  main.h  options.cpp  options.h
cmake/: CLI.cmake  Lzham.cmake  Lzma.cmake  SupercellCompression.cmake  dependencies.cmake
dependencies/astc/: premake5.lua
dependencies/astc/include/: astcenc_internal.h
dependencies/astc/source/: astcenc_compute_variance.cpp
dependencies/lzham/: premake5.lua
dependencies/lzham/include/: lzham.h
dependencies/lzham/src/lzhamdecomp/: lzham_platform.cpp  lzham_platform.h  lzham_traits.h
dependencies/lzma/: premake5.lua
dependencies/lzma/src/: LzmaEnc.c
dependencies/zstd/: premake5.lua
include/: SupercellCompression.h
include/SupercellCompression/: Astc.h  CompressionInterface.h  Compressor.h  DecompressionInterface.h  Decompressor.h  KhronosTexture.h  Lzham.h  Lzma.h  ScCompression.h  Signature.h  Zstd.h
include/SupercellCompression/Astc/: Compressor.h  Decompressor.h
include/SupercellCompression/Lzham/: Compressor.h  Decompressor.h  lzham_config.h
include/SupercellCompression/Lzma/: Compressor.h  Decompressor.h
include/SupercellCompression/Zstd/: Compressor.h  Decompressor.h
include/SupercellCompression/exception/: Astc.h  Lzham.h  Lzma.h  Zstd.h
include/SupercellCompression/exception/Astc/: CompressConfigInitException.h  CompressException.h  CompressInitException.h  DecompressException.h  DecompressInitException.h  GeneralException.h
include/SupercellCompression/exception/ImageInterface/: ImageAlreadyCompressedException.h
include/SupercellCompression/exception/Lzham/: CompressCorruptedDataException.h  CompressException.h  CompressInitException.h  DecompressException.h  DecompressInitException.h  GeneralException.h
include/SupercellCompression/exception/Lzma/: CompressException.h  CompressInitException.h  CompressPropsException.h  DecompressCorruptedDataException.h  DecompressException.h  DecompressInitException.h  DecompressMissingEndMarkException.h  GeneralException.h
include/SupercellCompression/exception/Sc/: BadFileMagicException.h
include/SupercellCompression/exception/Zstd/: CompressException.h  CompressInitException.h  CorruptedDataException.h  DecompressException.h  DecompressInitException.h  GeneralException.h
include/SupercellCompression/interface/: CompressionInterface.h  DecompressionInterface.h  ImageCompressionInterface.h  ImageDecompressionInterface.h
scripts/: generate_android_studio_ninja_project.bat  generate_visual_studio_2019_solution-in-source.bat  generate_visual_studio_2022_solution-in-source.bat
scripts/unix/: generate_android_studio_ninja_project.sh
scripts/windows/: generate_android_studio_ninja_project.cmd
source/Astc/: Astc.cpp  Compressor.cpp  Decompressor.cpp
source/Image/: KhronosTexture.cpp
source/Lzham/: Compressor.cpp  Decompressor.cpp
source/Lzma/: Compressor.cpp  Decompressor.cpp
source/Sc/: Compressor.cpp  Decompressor.cpp
source/Zstd/: Compressor.cpp  Decompressor.cpp
src/backend/: LzhamCompression.cpp  LzhamCompression.h  LzmaCompression.cpp  LzmaCompression.h  ZstdCompression.cpp  ZstdCompression.h
src/caching/: cache.cpp  cache.h
src/compression/: Compressor.cpp  Decompressor.cpp
supercell-compression/: CMakeLists.txt
supercell-compression/cmake/: astc.cmake  lzham.cmake  lzma.cmake  zstd.cmake
supercell-compression/source/compression/: compression.h  compressor.cpp  compressor.h  decompressor.cpp  decompressor.h  metadata.h  signature.h
supercell-compression/source/compression/backend/: decompressor_interface.h
supercell-compression/source/compression/backend/astc/: astc.cpp  astc.h  astc_compressor.cpp  astc_compressor.h  astc_decompressor.cpp  astc_decompressor.h
supercell-compression/source/compression/backend/interface/: compressor_interface.h  decompressor_interface.h  image_compressor_interface.h  image_decompressor_interface.h
supercell-compression/source/compression/backend/lzham/: lzham.h  lzham_compressor.cpp  lzham_compressor.h  lzham_config.h  lzham_decompressor.cpp  lzham_decompressor.h
supercell-compression/source/compression/backend/lzma/: lzma.cpp  lzma.h  lzma_compressor.cpp  lzma_compressor.h  lzma_decompressor.cpp  lzma_decompressor.h
supercell-compression/source/compression/backend/sc/: metadata.h  sc_compressor.cpp  sc_compressor.h  sc_decompressor.cpp  sc_decompressor.h  signature.h
supercell-compression/source/compression/backend/zstd/: zstd.h  zstd_compressor.cpp  zstd_compressor.h  zstd_decompressor.cpp  zstd_decompressor.h
